--- a/exps/default/train.yaml
+++ b/exps/default/train.yaml
@@ -3,6 +3,9 @@ MODULES:
   - "bblib.agents.DQN"
   - "bblib.agents.EpsilonScheduler"
 
+save_folder_prefix: "virtual"
+num_episodes: 400
+
 env_config:
   IMPORT: 'exps/default/env_config.yaml'
 
@@ -36,3 +39,4 @@ agent:
     end_eps: 0.1
     num_steps: 200
   episodes_in_memory: 50
+
