--- a/exps/default/train_virtual.yaml
+++ b/exps/default/train_virtual.yaml
@@ -1,7 +1,5 @@
 MODULES:
   - "bblib.environments.VirtualEnvironment"
-  - "bblib.agents.DQN"
-  - "bblib.agents.EpsilonScheduler"
 
 save_folder_prefix: "virtual"
 num_episodes: 400
@@ -29,14 +27,6 @@ environmentFactory:
     REF: "virtual_env_noise_cfg"
 
 agent:
-  CLASS: 'DQN'
-  env_config:
-    REF: "env_config"
-  action_counts: [3, 3]
-  epsilon_scheduler:
-    CLASS: 'LinearEpsilonScheduler'
-    start_eps: 1.0
-    end_eps: 0.1
-    num_steps: 300
-  episodes_in_memory: 50
+  IMPORT: 'exps/default/agent.yaml'
+
 
