--- a/exps/default/agent.yaml
+++ b/exps/default/agent.yaml
@@ -6,7 +6,7 @@ MODULES:
 CLASS: 'DQN'
 env_config:
   IMPORT: 'exps/default/env_config.yaml'
-action_counts: [5, 5]
+action_counts: [9] #[5, 5]
 epsilon_scheduler:
   CLASS: 'LinearEpsilonScheduler'
   start_eps: 0.5
@@ -18,4 +18,4 @@ episodes_in_memory: 50
 lr_scheduler_factory:
   CLASS: 'LRFactory'
   scheduler: "ExponentialLR"
-  gamma: 0.9999 #0.9943
+  gamma: 1.0 #0.9943
