--- a/exps/default/agent.yaml
+++ b/exps/default/agent.yaml
@@ -6,12 +6,12 @@ MODULES:
 CLASS: 'DQN'
 env_config:
   IMPORT: 'exps/default/env_config.yaml'
-action_counts: [9] #[5, 5]
+action_counts: [3, 3] #[5, 5]
 epsilon_scheduler:
   CLASS: 'LinearEpsilonScheduler'
-  start_eps: 0.5
+  start_eps: 0.9
   end_eps: 0.1
-  num_steps: 350 #700
+  num_steps: 700 #350 #700
 
 episodes_in_memory: 50
 
