--- a/exps/default/agent.yaml
+++ b/exps/default/agent.yaml
@@ -15,9 +15,11 @@ action_counts: [5, 5] #[5, 5]
 epsilon_scheduler:
   CLASS: 'ExponentialEpsilonScheduler'
   start_eps: 1.0
+  min_eps: 0.1
   #power: 0.99713  # iters: 800
-  power: 0.99884  # iters: 2000
+  #power: 0.99884  # iters: 2000
   #power: 0.99942  # iters: 4000
+  power: 0.9995
 
 episodes_in_memory: 50
 
