--- a/exps/default/agent.yaml
+++ b/exps/default/agent.yaml
@@ -6,7 +6,7 @@ MODULES:
 CLASS: 'DQN'
 env_config:
   IMPORT: 'exps/default/env_config.yaml'
-action_counts: [5, 5] #[5, 5]
+action_counts: [25] # [5, 5] #[5, 5]
 #epsilon_scheduler:
 #  CLASS: 'LinearEpsilonScheduler'
 #  start_eps: 0.9
@@ -14,7 +14,7 @@ action_counts: [5, 5] #[5, 5]
 #  num_steps: 700 #350 #700
 epsilon_scheduler:
   CLASS: 'ExponentialEpsilonScheduler'
-  start_eps: 1.0
+  start_eps: 0.6
   min_eps: 0.1
   #power: 0.99713  # iters: 800
   #power: 0.99884  # iters: 2000
