Rethinking model and animation saving

--- a/exps/default/train_real.yaml
+++ b/exps/default/train_real.yaml
@@ -5,6 +5,9 @@ MODULES:
 save_folder_prefix: "real"
 num_episodes: 200000
 
+train_episode_secs: 6.0
+test_episode_secs: 10.0
+
 env_config:
   IMPORT: 'exps/default/env_real.yaml'
 
