--- a/exps/default/train_virtual.yaml
+++ b/exps/default/train_virtual.yaml
@@ -4,6 +4,9 @@ MODULES:
 save_folder_prefix: "virtual"
 num_episodes: 200000
 
+train_episode_secs: 6.0
+test_episode_secs: 10.0
+
 env_config:
   IMPORT: 'exps/default/env_virtual.yaml'
 
