--- a/exps/default/agent_cont.yaml
+++ b/exps/default/agent_cont.yaml
@@ -4,7 +4,7 @@ MODULES:
   - "torch.optim.lr_scheduler"
 
 CLASS: 'DQN'
-action_counts: [25] # [5, 5] #[5, 5]
+action_counts: [5, 5] # [5, 5] #[5, 5]
 #epsilon_scheduler:
 #  CLASS: 'LinearEpsilonScheduler'
 #  start_eps: 0.9
@@ -17,7 +17,7 @@ epsilon_scheduler:
   #power: 0.99713  # iters: 800
   #power: 0.99884  # iters: 2000
   #power: 0.99942  # iters: 4000
-  power: 0.9995
+  power: 0.999  # 0.9995
 
 episodes_in_memory: 50
 
